--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -5,6 +5,10 @@
     padding: 20px;
 }
 
+.chekout__left{
+    background-color: white;
+}
+
 .checkout__title{
     border-bottom: 1px solid black;
     padding: 10px;
