--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -2,7 +2,7 @@
     width: 300px;
     height: 100px;
     padding: 20px;
-    background-color: #f3f3f3;
+    background-color: #f3f3f3; 
     border: 1px solid #dddddd;
     border-radius: 3px;
     margin: 10px;
@@ -21,7 +21,7 @@
 }
 
 .subtotal button{
-    background-color: #f7ca00;
+    background-color: #F7CA00;
     width: 100%;
     height: 30px;
     border: 1px solid;
